<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/screen_titel"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:text="@string/A_text"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/conjuction_1_1"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/true_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/conjuction_2_1"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/true_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjuction_1_1" />

    <TextView
        android:id="@+id/conjuction_3_1"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/false_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjuction_2_1" />

    <TextView
        android:id="@+id/conjuction_4_1"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/false_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjuction_3_1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="24dp"
        android:text="@string/B_text"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/conjuction_1_2"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/true_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/answer_1"
        app:layout_constraintStart_toEndOf="@+id/conjuction_1_1"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/conjuction_2_2"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/false_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/answer_2"
        app:layout_constraintStart_toEndOf="@+id/conjuction_2_1"
        app:layout_constraintTop_toBottomOf="@+id/conjuction_1_2" />

    <TextView
        android:id="@+id/conjuction_3_2"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/true_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/answer_3"
        app:layout_constraintStart_toEndOf="@+id/conjuction_3_1"
        app:layout_constraintTop_toBottomOf="@+id/conjuction_2_2" />

    <TextView
        android:id="@+id/conjuction_4_2"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/false_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/answer_4"
        app:layout_constraintStart_toEndOf="@+id/conjuction_4_1"
        app:layout_constraintTop_toBottomOf="@+id/conjuction_3_2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="32dp"
        android:text="@string/AB_text"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/answer_1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/answer_2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_1" />

    <EditText
        android:id="@+id/answer_3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_2" />

    <EditText
        android:id="@+id/answer_4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjuction_4_2" />
</androidx.constraintlayout.widget.ConstraintLayout>